# libdaemon

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  MANIFEST  Makefile.am  Makefile.in  NEWS  README  TODO  WARNING  configure.ac  distcp.sh  readme.md
doc/: Makefile.am  Makefile.in  cc.texi  isc.texi  libdaemon.3  libdaemon.latex  libdaemon.ltx  libdaemon.texi
src/: .daemon.c.swp  Makefile.am  Makefile.in  core.c  daemon.c  daemon.h  logging.c  rundir.c  rundir.h  testcore.c  testd.c
src/linux/: Makefile  daemon.c  daemon.h
src/openbsd/: daemon.c
